Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126515

Buttons are too small, focus rectangle only seen at the rounded corners

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.4
    • 6.7.2
    • Widgets: Styles
    • None
    • Windows
    • 3babe8c73 (14.0), d205844e5 (dev), 075b4d1eb (6.9), 7158a577a (tqtc/lts-6.8)

      Consider this screencast from Qt Creator 14's about dialog:

      Notice that the focus rectangle is only seen at the corners of the buttons. 

      Now have a look at how Windows Explorer's settings dialog looks like:

      The buttons are less rounded, but still rounded, and the focus rectangle is inside the button!

      This would explain why the Qt Creator's buttons seem so stretched.

      Lastly here is a screencast from the Windows Notepad where the focus is around the buttons:

      Qt Creator started with -style windowsvista:

      This looks like the Windows Explorer above, and doesn't look like having small buttons at all.

        1. snip1.mp4
          278 kB
        2. snip2.mp4
          224 kB
        3. snpi0.mp4
          501 kB
        4. system-information.txt
          17 kB
        5. win11-explorer.webp
          74 kB
        6. win11-notepad.webp
          38 kB
        7. win11-qt6.7.2.webp
          14 kB
        8. windows11-accent-color.webp
          1.27 MB
        9. windowsvista.webp
          23 kB
        For Gerrit Dashboard: QTBUG-126515
        # Subject Branch Project Status CR V

            wladimir.leuschner Wladimir Leuschner
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes